# elasticsearch-study

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  advanced_search.py  bulk_operations.py  debug_attachment.py  elasticsearch_utils.py  korean_search.py  main.py  pdf_legal_search.py  pdf_legal_search_fixed.py  pdf_legal_search_v2.py  pdf_search.py  pyproject.toml  quick_test.py  real_world_search.py  run_instructions.md  setup.bat  setup.sh  simple_utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
